--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body{
 }
 
 .container{
-     max-width: 1300px;
+     max-width: 1200px;
 }
 
 /*CABEÇALHO COMPUTADOR*/
@@ -72,8 +72,14 @@ li{
     text-align: center;
 }
 .imgdefundo{
-   height: 500px;
-    
+  height: 500px;
+}
+
+.description{
+    display: inline-block;
+    font-size: 25px;
+    border-bottom: 1px solid yellow;
+    margin-bottom: 20px;
 }
 /*PÁGINA SOBRE*/
 .about{
@@ -98,32 +104,32 @@ li{
 }
 
 /*PÁGINA DE CONTATO*/
-
-.contact{
-    width: 50%;
+.contact-container{
+    width: 90%;
     margin: auto;
 }
 
-th{
-    padding: 10px;
-}
-
-td{
-    padding: 10px;
-}
-
-.creditos{
-    margin-top: 50px;
+.contact{
+    margin: auto;
+    width: 70%;
 }
 
 .contactimg{
-    width: 25px;
+    width: 30px;
     display: inline-block;
-    margin: 10px;
+}
+
+
+.whatsapp{
+    display: flex;
+    margin-bottom: 10px;
+    align-items: center;
 }
 
 .listcontact{
     display: inline-block;
+    color: var(--corlogo);
+    font-weight: bold;
 }
 
 .email:hover{
@@ -133,6 +139,14 @@ td{
 
 #btn-mobile{
     display: none;
+}
+
+th{
+    padding: 10px;
+}
+
+td{
+    padding: 10px;
 }
 
 
@@ -163,7 +177,35 @@ article{
       }
 }
 
+@media (max-width:790px){
+    .imgdefundo{
+        height: 425px;
+    }
+
+    .description{
+        font-size: 18px;
+    }
+}
+
+@media (max-width:775px){
+    .imgdefundo{
+        height: 400px;
+    }
+
+    .description{
+        font-size: 18px;
+    }
+}
+
 @media (max-width:760px){
+    .container{
+        margin: auto;
+    }
+
+    .contact-container{
+        max-width: 500px;
+    }
+    
     .imgdefundo{
         height: 350px;
     }
@@ -178,7 +220,7 @@ article{
       width: 100%;
       top: 130px;
       right: 0px;
-      background: rgb(235, 203, 203);
+      background: rgb(70, 3, 3);
       height: 0px;
       transition: .6s;
       visibility: hidden;
@@ -246,8 +288,9 @@ article{
     .imgdefundo{
         height: 300px;
     }
+   
     .container{
-        max-width: 400px;
+        margin: auto;
     }
 
     li{
@@ -333,7 +376,7 @@ article{
 }
 
    thead, tbody,th,td,tr{
-       display: block;
+      display: block;
    }
 
    td,th{
@@ -355,6 +398,11 @@ article{
 
 
    @media (max-width:590px){
+        
+    .container{
+        margin: auto;
+    }
+
       .imgdefundo{
           height: 250px;
       }
