--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,6 @@ li{
 
 .contentinicio{
     margin: auto;
-    
     text-align: center;
 }
 .imgdefundo{
@@ -132,15 +131,6 @@ li{
     font-weight: bold;
 }
 
-.email:hover{
-    text-decoration: underline;
-    border-bottom: 1px solid white;
-}
-
-#btn-mobile{
-    display: none;
-}
-
 th{
     padding: 10px;
 }
@@ -149,6 +139,9 @@ td{
     padding: 10px;
 }
 
+#btn-mobile{
+    display: none;
+}
 
 /*PÁGINA DE PREÇOS*/
 
@@ -171,7 +164,6 @@ article{
 }
 
 .logoimg{
-    position: relative;
     margin-bottom: 10px;
 }
 
@@ -185,8 +177,7 @@ article{
 
 .precos{
     float: right;
-    position: relative;
-    right: 30px;
+    margin-right: 30px;
 }
 
 
@@ -198,6 +189,7 @@ article{
       }
 }
 
+/*INICIO RESPONSIVO DE 790PX*/
 @media (max-width:790px){
     .imgdefundo{
         height: 425px;
@@ -218,30 +210,35 @@ article{
     }
 }
 
+
+/* preços/Index/Sobre*/
 @media (max-width:760px){
     .container{
         margin: auto;
     }
 
-    .contact-container{
-        max-width: 500px;
-    }
-    
     .imgdefundo{
         height: 350px;
+    }
+
+/*CONTATO RESPONSIVO DE 760PX*/
+    .contact-container{
+        max-width: 500px;
     }
 
     li{
         display: block;
         
     }
+
+    /*MENU HAMBURGUER DE 760PX*/
     #menu{
       display: block; 
       position: absolute;
       width: 100%;
       top: 130px;
       right: 0px;
-      background: rgb(70, 3, 3);
+      background: rgb(235, 203, 203);
       height: 0px;
       transition: .6s;
       visibility: hidden;
@@ -302,10 +299,16 @@ article{
     }
 }
 
+/*RESPONSIVO DE 700PX*/
+@media (max-width:700px) {
+    #custo{
+        width: 80%;
+    }
+}
+
 @media (max-width:640px) {
     
-   /*MENU HAMBURGUER*/
-   
+   /*INDEX/SOBRE/PREÇOS*/
     .imgdefundo{
         height: 300px;
     }
@@ -391,9 +394,9 @@ article{
 
     table{
         display: block;
-        position: relative;
+        margin-left: 100px;
         width: 100%;
-        left: 100px;
+        
 }
 
    thead, tbody,th,td,tr{
@@ -410,7 +413,6 @@ article{
 
    tbody{
     width: auto;
-    position: relative;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
     white-space: nowrap;
@@ -429,4 +431,10 @@ article{
       }
    }
 
+}
+
+@media (max-width:500px) {
+    #custo{
+        width: 90%;
+    }
 }
