--- a/css/style.css
+++ b/css/style.css
@@ -501,7 +501,7 @@ article{
     }
     
     .horarios-mobile{
-        display: inline-block;
+        display:block;
     }
     @media (max-width:300px) {
         .imgdefundo{
