--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,10 @@ article{
 @media (max-width:700px) {
     #custo{
         width: 90%;
+        margin: auto;
     }
+
+
 
     .container-about{
         margin: auto;
