--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
     background-color: black;
     color: white;
     font-family: var(--fontbody);
-    
+    min-height: 100vh;
 }
 /*ADIÇOES A PARTE*/
 .horarios-mobile{
@@ -44,6 +44,9 @@ h4{
 .paragrafo-about{
     text-align: justify;
 }
+
+
+/* /ADIÇÕES A PARTE*/
 /*CABEÇALHO COMPUTADOR*/
 header{
     display: flex;
@@ -200,6 +203,40 @@ article{
     margin-right: 30px;
 }
 
+/*PÁGINA DE GALERIA*/
+
+.cortes-container{
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.card-img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 10px;
+}
+
+.imagens-corte{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  
+}
+
+.img-card{
+    height: 300px;
+    width: 300px;
+    border-top: 1px solid yellow;
+    border-right: 1px solid white;
+    border-bottom: 1px solid yellow;
+    border-left: 1px solid white;
+    border-radius: 5px;
+    padding: 2px;
+    margin: 20px;
+}
 
 /*MOBILE RESPONSIVE*/
 
@@ -484,6 +521,10 @@ article{
     .horarios-mobile{
         display: none;
     }
+
+    .imgdefundo{
+        height: 200px;
+    }
 }
 
 @media (max-width:400px) {
@@ -498,7 +539,7 @@ article{
     }
 
     .imgdefundo{
-        height: 230px;
+        height: 200px;
     }
 
     /*CONTATO*/
@@ -522,6 +563,5 @@ article{
         .container{
             max-width: 300px;
         }
-
     }
 }
