--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,79 @@ article{
     }
 }
 
+
+@media (max-width:825px){
+    #menu{
+        display: block; 
+        position: absolute;
+        width: 100%;
+        top: 130px;
+        right: 0px;
+        background: rgb(235, 203, 203);
+        height: 0px;
+        transition: .6s;
+        visibility: hidden;
+        overflow-y:hidden ;
+      }
+  
+      #nav.active #menu{
+          display: flex;
+          flex-direction: column;
+          height: calc(255vh + 70px);
+          visibility: visible;
+      }
+      
+      .linknav{
+          padding: 1rem 0;
+          margin:0 1rem;
+      }
+  
+      #btn-mobile{
+          display: flex;
+          padding: .5rem;
+          margin-right: 40px;
+          font-size: 1rem;
+          border: none;
+          background: none;
+          cursor: pointer;
+          color: white;
+          gap: .5rem;
+      }
+  
+      #hamburguer{
+          border-top: 2px solid var(--corlogo);
+          width: 30px;
+      }
+  
+      #hamburguer::after, #hamburguer::before{
+          content: '';
+          display: block;
+          width: 30px;
+          height: 2px;
+          background-color: var(--corlogo);
+          margin-top: 5px;
+          transition: .3s;
+          position: relative;
+      }
+  
+      #nav.active #hamburguer {
+          border-top-color: transparent;
+      }
+  
+      #nav.active #hamburguer::before{
+          transform: rotate(135deg);
+      }
+  
+      #nav.active #hamburguer::after{
+          transform: rotate(-135deg);
+          top: -7px;
+      }
+  
+      .none{
+          display: none;
+      }
+}
+
 /*INICIO RESPONSIVO DE 790PX*/
 @media (max-width:790px){
     .imgdefundo{
@@ -369,6 +442,10 @@ article{
     #nav.active #hamburguer::after{
         transform: rotate(-135deg);
         top: -7px;
+    }
+
+    .none{
+        display: none;
     }
 }
 
@@ -537,6 +614,15 @@ article{
     }
 
     /*INICIO*/
+
+    .container{
+       margin: auto;
+    }
+
+    .contentinicio{
+        padding: 30px;
+        overflow-x: hidden;
+    }
 
     header{
         width: 80%;
