--- a/css/style.css
+++ b/css/style.css
@@ -21,33 +21,16 @@ body{
     font-family: var(--fontbody);
     min-height: 100vh;
 }
-/*ADIÇOES A PARTE*/
-.horarios-mobile{
-    display: none;
-}
 
-h4{
-    font-family: var(--fontlogo);
-    margin-bottom: 15px;
-}
 
-.metodo-de-pagamento{
-    text-align: center;
-    margin-top: 20px;
-}
+/*PÁGINA DE INICIO*/
 
 .container{
     max-width: 1200px;
     min-width: 300px;
+
 }
 
-.paragrafo-about{
-    text-align: justify;
-}
-
-
-/* /ADIÇÕES A PARTE*/
-/*CABEÇALHO COMPUTADOR*/
 header{
     display: flex;
     flex-direction: row;
@@ -103,6 +86,12 @@ li{
     
 }
 /*PÁGINA SOBRE*/
+
+.container-about{
+    max-width: 1200px;
+    min-width: 300px;
+}
+
 .about{
     max-width: 70%;
     margin: auto;
@@ -115,7 +104,9 @@ li{
 .paragrafo-about{
     margin-top: 5px;
     text-align: center;
+    
 }
+
 
 .subh2{
     margin-bottom: 15px;
@@ -126,9 +117,11 @@ li{
 }
 
 /*PÁGINA DE CONTATO*/
+
 .contact-container{
-    width: 90%;
-    margin: auto;
+    max-width: 1200px;
+    min-width: 300px;
+
 }
 
 .contact{
@@ -166,6 +159,10 @@ td{
     display: none;
 }
 
+.horarios-mobile{
+    display: none;
+}
+
 /*PÁGINA DE PREÇOS*/
 
 #custo{
@@ -173,6 +170,14 @@ td{
     width: 50%;
 }
 
+.center{
+    text-align: center;
+}
+
+h4{
+    font-family: var(--fontlogo);
+    padding-bottom: 10px;
+}
 .paragrafo-art{
     font-size: 1.2rem;
 }
@@ -203,10 +208,16 @@ article{
     margin-right: 30px;
 }
 
+.metodo-de-pagamento{
+    text-align: center;
+    margin-top: 20px;
+}
+
 /*PÁGINA DE GALERIA*/
 
 .cortes-container{
-    padding: 10px;
+    max-width: 1200px;
+    min-height: 300px;
     box-sizing: border-box;
 }
 
@@ -609,9 +620,7 @@ article{
 }
 
 @media (max-width:400px) {
-    #custo{
-        width: 93%;
-    }
+
 
     /*INICIO*/
 
@@ -645,13 +654,35 @@ article{
     .horarios-mobile{
         display:block;
     }
-    @media (max-width:300px) {
-        .imgdefundo{
-            height: 200px;
-        }
 
-        .container{
-            max-width: 300px;
-        }
+    /*Preços*/
+
+    .precos{
+        margin-right: 0px;
+    }
+
+    .acept{
+        display: block;
+    }
+    
+}
+
+@media (max-width:357px) {
+    .precos{
+        margin-right: 0px;
+    }
+
+    .acept{
+        display: block;
+    }
+}
+
+@media (max-width:300px) {
+    .imgdefundo{
+        height: 200px;
+    }
+
+    .container{
+        max-width: 300px;
     }
 }
