--- a/css/style.css
+++ b/css/style.css
@@ -626,12 +626,14 @@ article{
         display: block;
         height: 400px;
         width: 95%;
+        border-radius: 8px;
     }
 
     #localizacao{
         padding: 20px;
         margin-bottom: 10px;
        margin-left: 15px;
+       
     }
 }
 
