--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ article{
 
 .cortes-container{
     max-width: 1400px;
-    
+    min-height: 300px;
     box-sizing: border-box;
     background-image: url('../images/pexels-nikolaos-dimou-1319460.jpg');
     background-position: center;
