--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,10 @@ article{
     .container-about{
         height: 110vh;
     }
+
+    .imgdefundo{
+        height: 425px;
+    }
 }
 
 @media (max-width:825px){
@@ -383,6 +387,10 @@ article{
   
       .none{
           display: none;
+      }
+
+      .imgdefundo{
+          height: 400px;
       }
 }
 
