att entre em contato coloquei um display flex no li-maps

--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,8 @@ body{
 
 
 /*PÁGINA DE INICIO*/
-.li-maps:hover{
-    text-decoration: underline;
-    cursor: pointer;
-}
+
+
 
 .container{
     max-width: 1400px;
@@ -176,6 +174,17 @@ li{
     gap: 8px;
 }
 
+.li-maps{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    align-items: center;
+}
+
+.li-maps:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
 
 .whatsapp{
     display: flex;
