--- a/css/style.css
+++ b/css/style.css
@@ -720,10 +720,7 @@ article{
 @media (max-width:500px) {
 
     .cortes-container{
-        background-image: url('../images/pexels-cottonbro-3998418.jpg');
-        background-size: cover;
-        background-position: center center;
-        background-repeat: no-repeat;
+        background-image: none;
     }
 
     .container-preco{
