--- a/css/style.css
+++ b/css/style.css
@@ -34,11 +34,10 @@ body{
 header{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content:space-around;
     align-items: center;
     font-family: var(--fontlogo);
     width: 100%;
-    gap: 80px;
 }
 
 .logo{
